--- a/03_Cursos_JavaScript/Curso_JavaScript_Udemy/aula_156_projetoAlcoolouGasolina_js/index.html
+++ b/03_Cursos_JavaScript/Curso_JavaScript_Udemy/aula_156_projetoAlcoolouGasolina_js/index.html
@@ -17,8 +17,9 @@
                 <p>Valor da Gasolina:</p>
                 <input type="number" name="vGasolina" placeholder="Digite o R$ da Gasolina" id="vGasolina" class="entradaDados">
             </div>
-            <div class="dSaida">
-                <p class="pSaida">Resultado</p>
+            <p class="txtresult">Resultado:</p>
+            <div class="dSaida">                
+                <p class="pSaida"></p>
             </div>
             <input type="button" value="Calcular" id="bCalcular" onclick="Calcular()">
         </section>
