Treino Color Flipper Finalizado com HTML  JS E CSS

--- a/03_Cursos_JavaScript/0_Treinando_JavaScript/CollorFliper/hex.html
+++ b/03_Cursos_JavaScript/0_Treinando_JavaScript/CollorFliper/hex.html
@@ -2,10 +2,6 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>ColorFliper</title>
     <link rel="stylesheet" href="style.css">
@@ -16,7 +12,7 @@
 <body>
     <nav>
         <div class="nav-center">
-            <h4>COLOR FLIPER </h4>
+            <h4>COLOR FLIPER HEX</h4>
             <ul>
                 <li><a href="index.html">Simple</a></li>
                 <li><a href="hex.html">hex</a></li>
@@ -44,7 +40,7 @@
 
     </main>
 
-    <script src="app.js"></script>
+    <script src="hex.js"></script>
     
 </body>
 </html>
