Eeventos de mouse e blur

--- a/03_Cursos_JavaScript/1_Curso_JavaScript_Udemy/Aula_204-210_Eventos/Aula_207_ copy/index.html
+++ b/03_Cursos_JavaScript/1_Curso_JavaScript_Udemy/Aula_204-210_Eventos/Aula_207_ copy/index.html
@@ -31,7 +31,7 @@
                     </span>
                 </h2>
             </div>
-    <!--<div id="divbotoes">
+   <div id="divbotoes">
         
                     <button type="button" class="btn btn-hero" onclick="trocarcor()">
                         Evento pelo HTML - Abordagem 1
@@ -47,7 +47,7 @@
 </div>
     <button type="button" class="btn btn-hero" id="btnremov">
                         Remover Event Listener
-                    </button> "-->
+                    </button> "
 
 <script src="Aula_207_eventos_de_teclado.js">
 </script>
